--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -1,23 +1,20 @@
-name: Build and Push Docker Image
+name: Build and Deploy Chatbot Service
 
 on:
   release:
     types: [published]
 
 jobs:
-  docker-build-and-push:
+  docker-build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout do código
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      # 2. Setup Buildx
       - name: Configurar Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 3. Cache de camadas Docker
       - name: Cache de camadas Docker
         uses: actions/cache@v3
         with:
@@ -26,17 +23,26 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      # 4. Login no Docker Hub
       - name: Login no Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 5. Build e push com tag da release
-      - name: Build e push da imagem Docker com tag
+      - name: Build e push da imagem Docker com tag da release
         env:
           TAG: ${{ github.event.release.tag_name }}
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/chatbot-service:$TAG .
           docker push ${{ secrets.DOCKER_USERNAME }}/chatbot-service:$TAG
+
+      - name: Deploy via SSH na VPS
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            docker pull ${{ secrets.DOCKER_USERNAME }}/chatbot-service:${{ github.event.release.tag_name }}
+            cd /opt/app
+            docker compose up -d
