--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,20 @@ on:
     types: [published]
 
 jobs:
-  docker-build-and-deploy:
+  build:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
+
+    outputs:
+      tag: ${{ steps.set-tag.outputs.tag }}
 
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
+
+      - name: Extrair tag da release
+        id: set-tag
+        run: echo "tag=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
 
       - name: Configurar Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -29,20 +37,26 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build e push da imagem Docker com tag da release
-        env:
-          TAG: ${{ github.event.release.tag_name }}
+      - name: Build e push da imagem
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/chatbot-service:$TAG .
-          docker push ${{ secrets.DOCKER_USERNAME }}/chatbot-service:$TAG
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/chatbot-service:${{ steps.set-tag.outputs.tag }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/chatbot-service:${{ steps.set-tag.outputs.tag }}
 
-      - name: Deploy via SSH na VPS
+  deploy:
+    name: Deploy na VPS
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            docker pull ${{ secrets.DOCKER_USERNAME }}/chatbot-service:${{ github.event.release.tag_name }}
-            cd /opt/app
+            cd /opt/app/chatbot-service
+            git reset --hard
+            git pull origin main
+            docker pull ${{ secrets.DOCKER_USERNAME }}/chatbot-service:${{ needs.build.outputs.tag }}
             docker compose up -d
